--- a/package.json
+++ b/package.json
@@ -28,5 +28,7 @@
     "dependencies": {
         "babel-preset-env": "^1.7.0"
     },
-    "devDependencies": {}
+    "devDependencies": {
+        "lodash": "^4.17.11"
+    }
 }
